// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginScreen (login folder) > matches snapshot 1`] = `
<div>
  <div
    class="fixed inset-0 w-full h-full bg-gradient-to-br from-slate-900 via-blue-900 to-indigo-900 flex items-center justify-center p-6"
  >
    <div
      class="w-full max-w-md"
    >
      <div
        class="text-center space-y-4 mb-8"
      >
        <div>
          <h1
            class="text-4xl font-bold text-white mb-2"
            style="font-family: system-ui, -apple-system, sans-serif; font-weight: 300; letter-spacing: -0.02em;"
          >
            MacroDash
          </h1>
          <p
            class="text-slate-400 text-lg"
          >
            Professional Financial Analytics
          </p>
        </div>
      </div>
      <div
        class="bg-slate-800/60 backdrop-blur-md rounded-xl border border-slate-600/30 shadow-2xl p-6 relative"
      >
        <div
          class="space-y-4"
        >
          <div
            class="text-center space-y-1 mb-4"
          >
            <h2
              class="text-xl font-semibold text-white"
            >
              Welcome back
            </h2>
            <p
              class="text-slate-400 text-sm"
            >
              Sign in to access your dashboard
            </p>
          </div>
          <div
            class="grid grid-cols-1 gap-2 mb-4"
          >
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 rounded-md gap-1.5 has-[>svg]:px-2.5 h-10 border-slate-600/50 bg-slate-700/30 hover:bg-slate-700/50 text-slate-200 p-2"
              data-slot="button"
            >
              <svg
                class="w-4 h-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
                  fill="#4285F4"
                />
                <path
                  d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
                  fill="#34A853"
                />
                <path
                  d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
                  fill="#FBBC05"
                />
                <path
                  d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
                  fill="#EA4335"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative"
          >
            <div
              class="absolute inset-0 flex items-center"
            >
              <div
                class="w-full border-t border-slate-600/50"
              />
            </div>
            <div
              class="relative flex justify-center text-xs"
            >
              <span
                class="px-3 bg-slate-800/60 text-slate-400"
              >
                or continue with email
              </span>
            </div>
          </div>
          <form
            class="space-y-3"
          >
            <div
              class="space-y-1"
            >
              <label
                class="text-sm text-slate-300"
                for="signin-email"
              >
                Email
              </label>
              <div
                class="relative"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-mail absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
                  />
                  <rect
                    height="16"
                    rx="2"
                    width="20"
                    x="2"
                    y="4"
                  />
                </svg>
                <input
                  class="w-full h-10 pl-10 pr-3 rounded-lg bg-slate-700/30 border border-slate-600/50 text-slate-200 placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-blue-500/50"
                  id="signin-email"
                  placeholder="Enter your email"
                  required=""
                  type="email"
                  value=""
                />
              </div>
            </div>
            <div
              class="space-y-1"
            >
              <label
                class="text-sm text-slate-300"
                for="signin-password"
              >
                Password
              </label>
              <div
                class="relative"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-lock absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="11"
                    rx="2"
                    ry="2"
                    width="18"
                    x="3"
                    y="11"
                  />
                  <path
                    d="M7 11V7a5 5 0 0 1 10 0v4"
                  />
                </svg>
                <input
                  class="w-full h-10 pl-10 pr-10 rounded-lg bg-slate-700/30 border border-slate-600/50 text-slate-200 placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-blue-500/50"
                  id="signin-password"
                  placeholder="Enter your password"
                  required=""
                  type="password"
                  value=""
                />
                <button
                  class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-500 hover:text-slate-300"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-eye w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="flex items-center justify-end text-sm"
            >
              <button
                class="text-blue-400 hover:text-blue-300"
                type="button"
              >
                Forgot password?
              </button>
            </div>
            <button
              class="whitespace-nowrap text-sm disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive px-4 py-2 has-[>svg]:px-3 w-full h-10 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-medium transition-colors flex items-center justify-center gap-2"
              data-slot="button"
              type="submit"
            >
              Sign in
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
            </button>
          </form>
          <div
            class="text-center text-sm text-slate-400"
          >
            Don't have an account?
             
            <button
              class="text-blue-400 hover:text-blue-300 font-medium"
            >
              Sign up
            </button>
          </div>
        </div>
      </div>
      <div
        class="text-center mt-6 text-slate-500 text-sm"
      >
        <p>
          By continuing, you agree to our Terms of Service and Privacy Policy
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginScreen (login folder) > matches snapshot with onSkip 1`] = `
<div>
  <div
    class="fixed inset-0 w-full h-full bg-gradient-to-br from-slate-900 via-blue-900 to-indigo-900 flex items-center justify-center p-6"
  >
    <div
      class="w-full max-w-md"
    >
      <div
        class="text-center space-y-4 mb-8"
      >
        <div>
          <h1
            class="text-4xl font-bold text-white mb-2"
            style="font-family: system-ui, -apple-system, sans-serif; font-weight: 300; letter-spacing: -0.02em;"
          >
            MacroDash
          </h1>
          <p
            class="text-slate-400 text-lg"
          >
            Professional Financial Analytics
          </p>
        </div>
      </div>
      <div
        class="bg-slate-800/60 backdrop-blur-md rounded-xl border border-slate-600/30 shadow-2xl p-6 relative"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 absolute top-4 right-4 text-slate-400 hover:text-white hover:bg-slate-700/50"
          data-slot="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-x h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 6 6 18"
            />
            <path
              d="m6 6 12 12"
            />
          </svg>
        </button>
        <div
          class="space-y-4"
        >
          <div
            class="text-center space-y-1 mb-4"
          >
            <h2
              class="text-xl font-semibold text-white"
            >
              Welcome back
            </h2>
            <p
              class="text-slate-400 text-sm"
            >
              Sign in to access your dashboard
            </p>
          </div>
          <div
            class="grid grid-cols-1 gap-2 mb-4"
          >
            <button
              class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border shadow-xs hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 rounded-md gap-1.5 has-[>svg]:px-2.5 h-10 border-slate-600/50 bg-slate-700/30 hover:bg-slate-700/50 text-slate-200 p-2"
              data-slot="button"
            >
              <svg
                class="w-4 h-4"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"
                  fill="#4285F4"
                />
                <path
                  d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"
                  fill="#34A853"
                />
                <path
                  d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"
                  fill="#FBBC05"
                />
                <path
                  d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"
                  fill="#EA4335"
                />
              </svg>
            </button>
          </div>
          <div
            class="relative"
          >
            <div
              class="absolute inset-0 flex items-center"
            >
              <div
                class="w-full border-t border-slate-600/50"
              />
            </div>
            <div
              class="relative flex justify-center text-xs"
            >
              <span
                class="px-3 bg-slate-800/60 text-slate-400"
              >
                or continue with email
              </span>
            </div>
          </div>
          <form
            class="space-y-3"
          >
            <div
              class="space-y-1"
            >
              <label
                class="text-sm text-slate-300"
                for="signin-email"
              >
                Email
              </label>
              <div
                class="relative"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-mail absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
                  />
                  <rect
                    height="16"
                    rx="2"
                    width="20"
                    x="2"
                    y="4"
                  />
                </svg>
                <input
                  class="w-full h-10 pl-10 pr-3 rounded-lg bg-slate-700/30 border border-slate-600/50 text-slate-200 placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-blue-500/50"
                  id="signin-email"
                  placeholder="Enter your email"
                  required=""
                  type="email"
                  value=""
                />
              </div>
            </div>
            <div
              class="space-y-1"
            >
              <label
                class="text-sm text-slate-300"
                for="signin-password"
              >
                Password
              </label>
              <div
                class="relative"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-lock absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-500"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="11"
                    rx="2"
                    ry="2"
                    width="18"
                    x="3"
                    y="11"
                  />
                  <path
                    d="M7 11V7a5 5 0 0 1 10 0v4"
                  />
                </svg>
                <input
                  class="w-full h-10 pl-10 pr-10 rounded-lg bg-slate-700/30 border border-slate-600/50 text-slate-200 placeholder-slate-500 focus:outline-none focus:ring-2 focus:ring-blue-500/50"
                  id="signin-password"
                  placeholder="Enter your password"
                  required=""
                  type="password"
                  value=""
                />
                <button
                  class="absolute right-3 top-1/2 -translate-y-1/2 text-slate-500 hover:text-slate-300"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-eye w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
                    />
                    <circle
                      cx="12"
                      cy="12"
                      r="3"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="flex items-center justify-end text-sm"
            >
              <button
                class="text-blue-400 hover:text-blue-300"
                type="button"
              >
                Forgot password?
              </button>
            </div>
            <button
              class="whitespace-nowrap text-sm disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive px-4 py-2 has-[>svg]:px-3 w-full h-10 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-medium transition-colors flex items-center justify-center gap-2"
              data-slot="button"
              type="submit"
            >
              Sign in
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right w-4 h-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
            </button>
          </form>
          <div
            class="text-center text-sm text-slate-400"
          >
            Don't have an account?
             
            <button
              class="text-blue-400 hover:text-blue-300 font-medium"
            >
              Sign up
            </button>
          </div>
        </div>
      </div>
      <div
        class="text-center mt-6 text-slate-500 text-sm"
      >
        <p>
          By continuing, you agree to our Terms of Service and Privacy Policy
        </p>
      </div>
    </div>
  </div>
</div>
`;
